--- a/css/style.css
+++ b/css/style.css
@@ -234,95 +234,6 @@
   }
 }
 
-.work {
-  /*  &__picture{
-      font-family: 'Montserrat', Arial, sans-serif;
-      position: relative;
-      display: inline-block;
-      overflow: hidden;
-      margin: 8px;
-      min-width: 230px;
-      max-width: 315px;
-      width: 100%;
-      color: #fff;
-      text-align: left;
-      font-size: 16px;
-      background: #000;
-  
-      img{
-        max-width: 100%;
-        backface-visibility: hidden;
-        vertical-align: top;
-      }
-      :before,
-      :after{
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        content: '';
-        background-color: #fff;
-        z-index: 1;
-        opacity: 0;
-      }
-      :before{
-        width: 0;
-        height: 1px;
-      }
-  
-      :after {
-        height: 0;
-        width: 1px;
-      }
-      figcaption{
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        padding: 15px 20px;
-      }
-      :hover img,
-      .hover img {
-        zoom: 1;
-        filter: alpha(opacity=20);
-        -webkit-opacity: 0.2;
-        opacity: 0.2;
-      }
-  
-      :hover:before,
-      .hover:before,
-      :hover:after,
-      .hover:after {
-        opacity: 1;
-        -webkit-transition-delay: 0.25s;
-        transition-delay: 0.25s;
-      }
-  
-      :hover:before,
-      .hover:before {
-        width: 40px;
-      }
-  
-      :hover:after,
-      .hover:after {
-        height: 40px;
-      }
-    *,
-    :before,
-    :after{
-      -webkit-transition: all 0.35s;
-      transition: all 0.35s;
-      -webkit-box-sizing: border-box;   //usunac to albo -->
-      box-sizing: border-box;
-    }
-    }
-    .work__picture *
-    .work__picture:before,
-    .work__picture:after{
-      -webkit-transition: all 0.35s;
-      transition: all 0.35s;
-      -webkit-box-sizing: border-box;   //usunac to albo -->
-      box-sizing: border-box;
-    }*/
-}
 .work--top {
   margin-top: 5%;
   font-family: Kaushan Script;
@@ -345,169 +256,26 @@
   color: #d9d9d9;
   font-size: 1em;
 }
-.work .work__picture {
+.work__picture {
   margin-top: 3%;
 }
-.work .work__picture div {
+.work__picture div {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
   position: relative;
 }
-.work .work__picture div img {
+.work__picture div img {
   width: 100%;
   margin: 0 0 0 0;
   padding: 0 0 0 0;
   vertical-align: top;
-}
-.work .work__picture .work__picture__overlay .work__picture__small {
-  z-index: 50;
   position: relative;
-  margin-top: -200px;
-  width: 8%;
-  opacity: 0;
 }
-@media only screen and (max-width: 1200px) {
-  .work .work__picture .work__picture__overlay .work__picture__small {
-    margin-top: -150px;
-  }
-}
-@media only screen and (max-width: 992px) {
-  .work .work__picture .work__picture__overlay .work__picture__small {
-    margin-top: -120px;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .work .work__picture .work__picture__overlay .work__picture__small {
-    margin-top: -200px;
-  }
-}
-.work .work__picture .work__picture__overlay .work__picture__small__three {
-  margin-top: -400px;
-}
-@media only screen and (max-width: 1200px) {
-  .work .work__picture .work__picture__overlay .work__picture__small__three {
-    margin-top: -280px;
-  }
-}
-@media only screen and (max-width: 992px) {
-  .work .work__picture .work__picture__overlay .work__picture__small__three {
-    margin-top: -200px;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .work .work__picture .work__picture__overlay .work__picture__small__three {
-    margin-top: -300px;
-  }
-}
-.work .work__picture .work__picture__overlay .work__picture__text__bold {
-  z-index: 51;
-  position: absolute;
-  opacity: 0;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 0.9em;
-  margin-top: -170px;
-  text-align: center;
-  margin-left: 30%;
-  color: white;
-}
-@media only screen and (max-width: 1200px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__bold {
-    margin-top: -140px;
-  }
-}
-@media only screen and (max-width: 992px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__bold {
-    margin-left: 15%;
-    margin-top: -100px;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__bold {
-    margin-top: -180px;
-    margin-left: 30%;
-  }
-}
-.work .work__picture .work__picture__overlay .work__picture__text__bold__three {
-  margin-top: -340px;
-}
-@media only screen and (max-width: 1200px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__bold__three {
-    margin-top: -250px;
-  }
-}
-@media only screen and (max-width: 992px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__bold__three {
-    margin-left: 15%;
-  }
-}
-@media only screen and (max-width: 992px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__bold__three {
-    margin-top: -180px;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__bold__three {
-    margin-top: -270px;
-    margin-left: 30%;
-  }
-}
-.work .work__picture .work__picture__overlay .work__picture__text__small {
-  z-index: 52;
-  position: absolute;
-  opacity: 0;
-  font-family: 'Roboto', sans-serif;
-  font-style: italic;
-  font-size: 0.8em;
-  margin-top: -150px;
-  color: white;
-  margin-left: 34%;
-}
-@media only screen and (max-width: 1200px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__small {
-    margin-top: -120px;
-  }
-}
-@media only screen and (max-width: 992px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__small {
-    margin-left: 19%;
-    margin-top: -80px;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__small {
-    margin-top: -150px;
-    margin-left: 35%;
-  }
-}
-.work .work__picture .work__picture__overlay .work__picture__text__small__three {
-  margin-top: -300px;
-}
-@media only screen and (max-width: 1200px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__small__three {
-    margin-top: -230px;
-  }
-}
-@media only screen and (max-width: 992px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__small__three {
-    margin-left: 19%;
-  }
-}
-@media only screen and (max-width: 992px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__small__three {
-    margin-top: -160px;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .work .work__picture .work__picture__overlay .work__picture__text__small__three {
-    margin-top: -250px;
-    margin-left: 35%;
-  }
-}
-.work .work__picture .work__picture__overlay:after {
+.work__picture--img:after {
   content: '\A';
   position: absolute;
   width: 100%;
-  height: 97%;
+  height: 100%;
   top: 0;
   left: 0;
   background: linear-gradient(#f38181, #fce38a);
@@ -515,29 +283,41 @@
   transition: all 1s;
   -webkit-transition: all 1s;
 }
-.work .work__picture .work__picture__overlay:hover:after {
+.work__picture--img:hover:after, .work__picture--img.hover:after {
   opacity: 0.8;
 }
-.work .work__picture .work__picture__overlay:hover .work__picture__small {
+.work__picture .work__picture--overlay {
+  position: absolute;
+  z-index: 50;
+  margin-top: -50%;
+  text-align: center;
+  width: 100%;
+  color: white;
+  opacity: 0;
+}
+.work__picture .work__picture--overlay--img {
+  width: 10%;
+}
+.work__picture .work__picture--overlay--textb {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.9em;
+  margin-top: 3%;
+}
+.work__picture .work__picture--overlay--texts {
+  font-family: 'Roboto', sans-serif;
+  font-style: italic;
+  font-size: 0.8em;
+  margin-top: -3%;
+}
+.work__picture .work__picture--overlay--three {
+  margin-top: -85%;
+}
+.work__picture .work__picture--overlay:hover {
   opacity: 0.8;
 }
-.work .work__picture .work__picture__overlay:hover .work__picture__text__bold {
+.work__picture .work__picture--img:hover:after + .work__picture--overlay--img,
+.work__picture .work__picture--img.hover:after + .work__picture--overlay--img {
   opacity: 0.8;
-}
-.work .work__picture .work__picture__overlay:hover .work__picture__text__small {
-  opacity: 0.8;
-}
-.work .work__picture .work__picture__bottom {
-  margin-top: -20px;
-}
-@media only screen and (max-width: 768px) {
-  .work .work__picture .work__picture__bottom {
-    margin-top: -20px;
-    margin-bottom: -20px;
-  }
-}
-.work .work__picture .work__picture__bottom:after {
-  height: 94%;
 }
 
 #banner {
@@ -1264,17 +1044,22 @@
     padding-left: 35%;
   }
 }
+.testimontial__slider--page--img {
+  margin-left: 20%;
+}
 .testimontial__slider--page--img img {
-  width: 60%;
+  width: 80%;
 }
 @media only screen and (max-width: 1200px) {
   .testimontial__slider--page--img img {
+    padding-top: 15%;
     width: 80%;
   }
 }
 @media only screen and (max-width: 768px) {
   .testimontial__slider--page--img img {
     width: 50%;
+    margin-left: -20%;
     text-align: center;
   }
 }
@@ -1302,6 +1087,21 @@
 }
 .testimontial__slider--page--name--name {
   font-family: 'Kaushan Script', cursive;
+}
+
+.carousel-control.left,
+.carousel-control.right {
+  background-image: none;
+}
+.carousel-control.left img,
+.carousel-control.right img {
+  margin-top: 30%;
+}
+@media only screen and (max-width: 768px) {
+  .carousel-control.left img,
+  .carousel-control.right img {
+    padding-top: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
