--- a/sass/_testimontial.scss
+++ b/sass/_testimontial.scss
@@ -1,8 +1,8 @@
-.testimontial{
+.testimontial {
   padding-top: 4%;
   padding-bottom: 5%;
-  &__slider{
-    &--left{
+  &__slider {
+    &--left {
       text-align: center;
       margin-top: 5%;
       @media #{$xs-screen}
@@ -10,7 +10,7 @@
         margin-top: 25%;
       }
     }
-    &--right{
+    &--right {
       text-align: center;
       margin-top: 3%;
       @media #{$xs-screen}
@@ -18,27 +18,31 @@
         margin-top: 0%;
       }
     }
-    &--page{
+    &--page {
       padding-top: 1%;
       @media #{$xs-screen}
       {
-        padding-left:35%
+        padding-left: 35%
       }
-      &--img{
+      &--img {
+        margin-left: 20%;
         img {
-          width: 60%;
+          width: 80%;
           @media #{$md-screen}
           {
+            padding-top: 15%;
             width: 80%;
           }
           @media #{$xs-screen}
           {
             width: 50%;
+            margin-left: -20%;
             text-align: center;
           }
         }
+
       }
-      &--text{
+      &--text {
         color: $color-grey-dark;
         font-family: 'Roboto', sans-serif;
         font-style: italic;
@@ -51,17 +55,28 @@
           margin-left: -20%;
         }
       }
-      &--name{
+      &--name {
         padding-top: 3%;
         @media #{$xs-screen}
         {
           margin-left: -20%;
         }
-        &--name{
+        &--name {
           font-family: 'Kaushan Script', cursive;
         }
       }
     }
-
   }
+}
+.carousel-control.left,
+.carousel-control.right{
+  background-image: none;
+  img{
+    margin-top: 30%;
+    @media #{$xs-screen}
+    {
+      padding-top: 100%;
+    }
+  }
+
 }
