--- a/sass/_story-about-us.scss
+++ b/sass/_story-about-us.scss
@@ -1,11 +1,12 @@
-#about{
-  .about__info--first{
+#about {
+  .about__info--first {
     font-family: 'Kaushan Script', cursive;
     font-size: 20px;
     color: black;
     margin-top: 5%;
   }
-  .about__info--second{
+
+  .about__info--second {
     text-transform: uppercase;
     font-size: 30px;
     font-family: 'Montserrat', sans-serif;
@@ -13,136 +14,187 @@
     margin-top: 0;
     color: black;
   }
-  .about__info__bar{
-    display:inline-block;
+
+  .about__info__bar {
+    display: inline-block;
     border: 2px solid $color-red;
     width: 50px;
     margin-top: 1.5%;
   }
-  .about__info--text{
+
+  .about__info--text {
     margin-left: 20%;
     margin-right: 20%;
     margin-top: 1.5%;
-    width:60%;
+    width: 60%;
   }
-  .about__gallery{
+
+  .about__gallery {
+    .wrapper{
+      @media #{$xs-screen}
+      {
+        margin-bottom: 4%;
+      }
+    }
     margin-top: 5%;
     margin-bottom: 10%;
-    div{
-      @media(max-width:$xs){
-        margin-bottom: 5%;
-      }
+    @media #{$xs-screen}
+    {
+      padding-left: 23.5%;
     }
-    .img{
-      background-repeat:no-repeat;
-      background-size:cover;
-      width:70%;
-      height:230px;
-      margin-bottom: 15%;
-      img.about__gallery__img--bg{
-        z-index: 3;
-        width: 70%;
-        height: 100%;
-        margin:0;
-        &:hover{
-          margin-top: -3%;
-          margin-left: -7%;
-          -webkit-transition: all 0.7s ease-out;
-          -moz-transition: all 0.7s ease-out;
-          -ms-transition: all 0.7s ease-out;
-          -o-transition: all 0.7s ease-out;
-          transition: all 0.7s ease-out;
+    @media(max-width:740px){
+      padding-left: 23%;
+    }
+    @media(max-width:715px){
+      padding-left: 22%;
+    }
+    @media(max-width:690px){
+      padding-left: 20%;
+    }
+    @media(max-width:665px){
+      padding-left: 19%;
+    }
+    @media(max-width:640px){
+      padding-left: 18%;
+    }
+    @media(max-width:620px){
+      padding-left: 17%;
+    }
+    @media(max-width:590px){
+      padding-left: 16%;
+    }
+    @media(max-width:570px){
+      padding-left: 15%;
+    }
+    @media(max-width:550px){
+      padding-left: 14%;
+    }
+    @media(max-width:530px){
+      padding-left: 13%;
+    }
+    &__img {
+          width: 380px;
+          height: 250px;
+          opacity: 1;
+          z-index: 50;
+          @media #{$md-screen}
+          {
+            width: 310px;
+            height: 200px;
+          }
+          @media #{$sm-screen}
+          {
+            width: 230px;
+            height: 150px;
+          }
+          @media #{$xs-screen}
+          {
+            width: 380px;
+            height: 250px;
+          }
+          &--1 {
+            background: url('../img/aboutus_pic1.png');
+            background-size:cover;
+          }
+          &--2 {
+            background: url('../img/aboutus_pic2.png');
+            background-size:cover;
+          }
+          &--3 {
+            background: url('../img/aboutus_pic3.png');
+            background-size:cover;
+          }
         }
-      }
-      img.about__gallery__img--pic--1{
-        z-index: 100;
-        margin:auto;
-        position: relative;
-        border: 3px black solid;
-      }
-      .about__gallery__text{
-        z-index: 100;
-        margin-top:-100%;
-        margin-left: 50%;
-        position:absolute;
-        color:white;
-        font-size: 15px;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 900;
-        text-transform: uppercase;
-        border: 3px black solid;
-      }
-      @media(max-width:768px){
-            margin: auto !important;
-            margin-bottom: 20%;
-      }
-      &:before {
-        position: absolute;
-        content: " ";
-        display: block;
-        width: 66%;
-        height: 100%;
-        background-color: $color-blue;
-        z-index: -100;
-        @media(max-width:1580px){
-              width: 65%;
+        &--bg {
+          width: 380px;
+          height: 250px;
+          opacity: 1;
+          z-index: -100;
+          position: absolute;
+          background-color: $color-blue;
+          @media #{$md-screen}
+          {
+            width: 310px;
+            height: 200px;
+          }
+          @media #{$sm-screen}
+          {
+            width: 230px;
+            height: 150px;
+          }
+          @media #{$xs-screen}
+          {
+            width: 380px;
+            height: 250px;
+          }
         }
-        @media(max-width:1280px){
-              width: 64%;
-        }
-        @media(max-width:1160px){
-              width: 63%;
-        }
-        @media(max-width:940px){
-              width: 62%;
-        }
-        @media(max-width:$xs){
-              width: 67%;
-        }
-        @media(max-width:700px){
-              width: 66.5%;
-        }
-        @media(max-width:600px){
-              width: 66%;
-        }
-        @media(max-width:500px){
-              width: 65%;
-        }
-        @media(max-width:420px){
-              width: 64%;
-        }
-      }
+        &--top {
+          width: 380px;
+          height: 250px;
+          opacity: 0;
+          z-index: 90;
+          position: absolute;
+          background: linear-gradient($color-red, $color-yellow);
+          img{
+            display: block;
+            margin:auto;
+            margin-top: 15%;
+            @media #{$xs-screen}
+            {
+              margin-top: 20%;
+            }
+          }
+          span{
+            text-transform: uppercase;
+            font-weight: bold;
+            color:white;
+            display:block;
+            @media #{$xs-screen}
+            {
+              margin-top: 5%;
+            }
+          }
+          @media #{$md-screen}
+          {
+            width: 310px;
+            height: 200px;
+          }
+          @media #{$sm-screen}
+          {
+            width: 230px;
+            height: 150px;
+          }
+          @media #{$xs-screen}
+          {
+            width: 380px;
+            height: 250px;
+          }
+          &:hover {
+            opacity: 0.8;
+            margin-top: -15px;
+            margin-left: -15px;
+            margin-bottom: 15px;
+            -webkit-transition: all 0.7s ease-out;
+            -moz-transition: all 0.7s ease-out;
+            -ms-transition: all 0.7s ease-out;
+            -o-transition: all 0.7s ease-out;
+            transition: all 0.7s ease-out;
 
-    }
-    .about__gallery--first{
-      margin-left: 45%;
-      margin-bottom: auto;
-      img.about__gallery__img--bg{
-        content:url("../img/aboutus_pic1.png");
-        width: 100%;
+          }
+          &:hover img {
+            opacity: 1 !important;
+          }
+          &:hover + .about__gallery__img {
+            margin-bottom: 15px;
+            margin-top: -15px;
+            margin-left: -15px;
+            -webkit-transition: all 0.7s ease-out;
+            -moz-transition: all 0.7s ease-out;
+            -ms-transition: all 0.7s ease-out;
+            -o-transition: all 0.7s ease-out;
+            transition: all 0.7s ease-out;
+          }
+        }
 
-      }
-      img.about__gallery__img--pic--1{
-        content:url("../img/pictograms/aboutus_pic1_icon.png");
-      }
-
-    }
-
-    .about__gallery--second{
-      margin:auto;
-      img.about__gallery__img--bg{
-        content:url("../img/aboutus_pic2.png");
-        width: 100%;
-      }
-    }
-    .about__gallery--third{
-      margin-left: -15%;
-      margin-bottom: auto;
-      img.about__gallery__img--bg{
-        content:url("../img/aboutus_pic3.png");
-        width: 100%;
-      }
-    }
   }
-
 }
