--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -45,8 +45,8 @@
     margin-top: 3%;
     margin-bottom: 10%;
     &:hover{
-      border-color: $color-blue;
-      color: $color-blue;
+      background: $gradient-top;
+      border: 2px solid $gradient-top;
       -webkit-transition: all .5s ease-in-out;
       -moz-transition: all .5s ease-in-out;
       transition: all .5s ease-in-out;
