Small changes in TEAM

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -16,3 +16,5 @@ $xs:768px;
 $md-screen: "only screen and (max-width : 1200px)";
 $sm-screen: "only screen and (max-width : 992px)";
 $xs-screen: "only screen and (max-width : 768px)";
+
+$max-img-width: 380px;
