--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,3 +11,8 @@
 @import '_map.scss';
 @import '_foot.scss';
 @import '_testimontial.scss';
+@import '_services.scss';
+@import '_design.scss';
+@import '_quotes.scss';
+@import '_service.scss';
+@import '_carousel.scss';
