--- a/css/style.css
+++ b/css/style.css
@@ -1188,13 +1188,17 @@
 }
 .carousel-control.left img,
 .carousel-control.right img {
-  margin-top: 30%;
+  margin-top: 5%;
 }
 @media only screen and (max-width: 768px) {
   .carousel-control.left img,
   .carousel-control.right img {
     padding-top: 100%;
   }
+}
+
+.right {
+  background-color: #1b6d85;
 }
 
 #services {
