--- a/sass/_foot.scss
+++ b/sass/_foot.scss
@@ -123,7 +123,8 @@
       }
     }
     &--line{
-      margin-left: -5%;
+      //margin-left: -5%;
+      width: 100%;
     }
     &--foot{
       text-align: center;
