--- a/sass/_logos.scss
+++ b/sass/_logos.scss
@@ -10,7 +10,7 @@
         img{
           @media #{$xs-screen}
           {
-            margin-bottom: 50px;
+            padding-top: 10px;
           }
         }
       }
