--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
 }
 @media only screen and (max-width: 768px) {
   .meet div .col-xs-12 {
-    padding-left: 20%;
+    padding-left: 10%;
     padding-top: 5%;
   }
 }
@@ -65,6 +65,12 @@
   .meet div .col-xs-12 .meet__team--people {
     width: 360px;
     height: 450px;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .meet div .col-xs-12 .meet__team--people {
+    width: 250px;
+    height: 350px;
   }
 }
 .meet div .col-xs-12 .meet__team--people--1 {
@@ -103,6 +109,12 @@
   .meet div .col-xs-12 .meet__team--back {
     width: 360px;
     height: 450px;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .meet div .col-xs-12 .meet__team--back {
+    width: 250px;
+    height: 350px;
   }
 }
 .meet div .col-xs-12 .meet__team--top {
@@ -167,6 +179,12 @@
     height: 450px;
   }
 }
+@media only screen and (max-width: 500px) {
+  .meet div .col-xs-12 .meet__team--top {
+    width: 250px;
+    height: 350px;
+  }
+}
 .meet div .col-xs-12 .meet__team--top:hover {
   opacity: 0.8;
   margin-top: -20px;
@@ -186,10 +204,13 @@
   .meet__name {
     opacity: 0;
     position: absolute;
+    font-size: 0em;
+    margin-top: -100px;
   }
 }
 .meet__name div {
   padding-top: 5%;
+  padding-left: 15%;
 }
 .meet__name div .meet__name--name {
   font-weight: bold;
@@ -208,7 +229,7 @@
   .meet__name--xs {
     position: relative;
     opacity: 1;
-    margin-left: -55%;
+    margin-left: -40%;
   }
   .meet__name--xs--name {
     font-weight: bold;
@@ -230,7 +251,7 @@
 }
 @media only screen and (max-width: 768px) {
   .logos div .logos__row div img {
-    margin-bottom: 50px;
+    padding-top: 10px;
   }
 }
 
@@ -789,7 +810,7 @@
 }
 .say__client {
   padding-top: 2%;
-  padding-bottom: 2%;
+  padding-bottom: 5%;
 }
 .say__client--name {
   font-family: 'Montserrat', sans-serif;
@@ -818,7 +839,7 @@
   text-align: left;
 }
 .say__client--img img {
-  width: 100%;
+  width: 90%;
   padding-right: 5%;
 }
 @media only screen and (max-width: 992px) {
@@ -849,29 +870,6 @@
   padding-bottom: 3%;
   padding-top: 1%;
 }
-.blog__img--margin--1 {
-  margin-left: -1.5%;
-  margin-right: 0.5%;
-}
-@media only screen and (max-width: 992px) {
-  .blog__img--margin--1 {
-    margin-left: 0%;
-  }
-}
-@media only screen and (max-width: 1200px) {
-  .blog__img--margin--1 {
-    margin-left: -0.4%;
-    margin-right: 0.1%;
-  }
-}
-.blog__img--margin--2 {
-  margin-right: 0.5%;
-}
-@media only screen and (max-width: 1200px) {
-  .blog__img--margin--2 {
-    margin-right: 0.1%;
-  }
-}
 .blog__img--top {
   padding-top: 4%;
   font-family: 'Montserrat', sans-serif;
@@ -885,7 +883,13 @@
   margin-left: -4%;
 }
 .blog__img--line {
-  margin-left: -4%;
+  width: 120%;
+  margin-left: -10%;
+}
+@media only screen and (max-width: 768px) {
+  .blog__img--line {
+    width: 100%;
+  }
 }
 .blog__img--pictograms {
   padding-top: 2%;
@@ -896,15 +900,13 @@
   margin-left: 2%;
   margin-right: 2%;
 }
-@media only screen and (max-width: 1200px) {
-  .blog__img--img img {
-    width: 90%;
-  }
+.blog__img--img {
+  text-align: center;
 }
 .blog__img--img figcaption {
   background-color: #95e1d3;
   position: absolute;
-  top: 40%;
+  top: 35%;
   left: -3%;
   right: 84%;
   text-align: center;
@@ -917,26 +919,43 @@
 }
 @media only screen and (max-width: 992px) {
   .blog__img--img figcaption {
-    top: 45%;
+    top: 20%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .blog__img--img figcaption {
+    top: 35%;
   }
 }
 .blog__img--img--1 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 1.5em;
+  font-size: 1.1em;
   font-weight: bold;
-  padding-top: 2%;
+  padding-top: 1%;
   padding-bottom: 0px;
   margin-bottom: 0px;
+}
+@media only screen and (max-width: 768px) {
+  .blog__img--img--1 {
+    font-size: 1.5em;
+  }
 }
 .blog__img--img--2 {
   font-family: 'Roboto', sans-serif;
   font-style: italic;
+  font-size: 0.9em;
   padding-top: 0px;
   margin-top: 0px;
+  margin-bottom: 3px;
 }
 @media only screen and (max-width: 992px) {
-  .blog__img {
-    margin-left: 20%;
+  .blog__img--img--2 {
+    margin-bottom: 0px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .blog__img--img--2 {
+    margin-bottom: 3px;
   }
 }
 
@@ -1094,7 +1113,7 @@
   }
 }
 .foot__3--line {
-  margin-left: -5%;
+  width: 100%;
 }
 .foot__3--foot {
   text-align: center;
@@ -1185,15 +1204,13 @@
 .carousel-control.left,
 .carousel-control.right {
   background-image: none;
-}
-.carousel-control.left img,
-.carousel-control.right img {
-  margin-top: 30%;
+  height: 50px;
+  margin-top: 0%;
 }
 @media only screen and (max-width: 768px) {
   .carousel-control.left img,
   .carousel-control.right img {
-    padding-top: 100%;
+    margin-top: 10%;
   }
 }
 
