--- a/sass/_meet.scss
+++ b/sass/_meet.scss
@@ -34,7 +34,7 @@
       padding-top: 3%;
       @media #{$xs-screen}
       {
-        padding-left: 20%;
+        padding-left: 10%;
         padding-top: 5%;
       }
       .meet__team {
@@ -57,6 +57,11 @@
           {
             width: 360px;
             height: 450px;
+          }
+          @media only screen and (max-width: 500px)
+          {
+            width: 250px;
+            height: 350px;
           }
           &--1 {
             background: url('../img/meet_img_1.png');
@@ -94,6 +99,11 @@
             width: 360px;
             height: 450px;
           }
+          @media only screen and (max-width: 500px)
+          {
+            width: 250px;
+            height: 350px;
+          }
         }
         &--top {
           width: 360px;
@@ -101,7 +111,7 @@
           opacity: 0;
           z-index: 400;
           position: absolute;
-          background: linear-gradient($color-red, $color-yellow);
+          background: linear-gradient($color-red,$color-yellow);
           &--1 {
             background-color: $color-red;
             margin-top: 45%;
@@ -131,7 +141,6 @@
             @media #{$sm-screen}{
               padding: 5px 10px 5px 10px;
             }
-
           }
           @media #{$md-screen}
           {
@@ -148,6 +157,11 @@
             width: 360px;
             height: 450px;
           }
+          @media only screen and (max-width: 500px)
+          {
+            width: 250px;
+            height: 350px;
+          }
         }
         &--top:hover {
           opacity: 0.8;
@@ -160,6 +174,8 @@
           margin-top: -20px;
           margin-left: -20px;
         }
+
+
       }
     }
   }
@@ -170,10 +186,12 @@
     {
       opacity: 0;
       position: absolute;
+      font-size: 0em;
+      margin-top: -100px;
     }
     div {
       padding-top: 5%;
-
+      padding-left: 15%;
       .meet__name--name {
         font-weight: bold;
         font-size: 1.1em;
@@ -189,7 +207,7 @@
       @media #{$xs-screen}{
         position: relative;
         opacity: 1;
-        margin-left: -55%;
+        margin-left: -40%;
         &--name {
           font-weight: bold;
           font-size: 1.1em;
