--- a/css/style.css
+++ b/css/style.css
@@ -269,9 +269,34 @@
   padding-bottom: 3%;
   text-align: center;
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 992px) {
   .logos div .logos__row div img {
-    padding-top: 10px;
+    padding-top: 30px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .logos div .logos__row div img {
+    width: 70%;
+  }
+}
+.logos div .logos__row div:nth-child(4) {
+  padding-top: 10px;
+}
+@media only screen and (max-width: 768px) {
+  .logos div .logos__row div:nth-child(5),
+  .logos div .logos__row div:nth-child(6) {
+    padding-top: -20px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .logos div .logos__row div:nth-child(5),
+  .logos div .logos__row div:nth-child(6) {
+    margin-top: -90px;
+  }
+}
+@media only screen and (max-width: 387px) {
+  .logos div .logos__row div:nth-child(6) {
+    margin-left: 35%;
   }
 }
 
