--- a/sass/_logos.scss
+++ b/sass/_logos.scss
@@ -8,12 +8,34 @@
     .logos__row{
       div{
         img{
-          @media #{$xs-screen}
+          @media #{$sm-screen}
           {
-            padding-top: 10px;
+            padding-top: 30px;
+          }
+          @media only screen and (max-width: 480px){
+            width: 70%;
           }
         }
       }
+      div:nth-child(4) {
+        padding-top: 10px;
+      }
+      div:nth-child(5),
+      div:nth-child(6) {
+        @media #{$xs-screen}
+        {
+          padding-top: -20px;
+        }
+        @media only screen and (max-width: 480px){
+          margin-top: -90px;
+        }
+      }
+      div:nth-child(6){
+        @media only screen and (max-width: 387px) {
+          margin-left: 35%;
+        }
+      }
     }
+
   }
 }
